actually vscode config was already checked in, so update  [PTV-1887]

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,9 @@
     "python.linting.pylintEnabled": false,
     "files.autoSave": "afterDelay",
     "files.autoSaveDelay": 500,
-    "python.pythonPath": "python3"
+    "python.pythonPath": "python3",
+    "cSpell.words": [
+        "aiohttp",
+        "authme"
+    ]
 }
