--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
-aiofiles==0.3.1
+aiofiles==23.1.0
 aiohttp_cors==0.7.0
-aiohttp==3.7.4
-coverage==4.4.2
+aiohttp==3.8.4
+coverage==7.2.7
 defusedxml==0.7.1
-frozendict==2.0.3
-globus-sdk==1.6.1
-hypothesis==6.14.5
-openpyxl==3.0.7
-pandas==1.3.2
-pytest-aiohttp==0.1.3
-pytest-cov==2.5.1
-pytest==6.2.4
-python-dotenv==0.14.0
-python-magic==0.4.24 
-uvloop==0.15.3
-xlrd==2.0.1
+frozendict==2.3.8
+globus-sdk==3.23.0
+hypothesis==6.81.1
+openpyxl==3.1.2
+pandas==2.0.3 
+pytest-aiohttp==1.0.4
+pytest-asyncio==0.21.0
+pytest-cov==4.1.0
+pytest==7.4.0
+python-dotenv==1.0.0
+python-magic==0.4.27
+uvloop==0.17.0
+xlrd==2.0.1 # fairly out of date
