--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 aiofiles==23.1.0
 aiohttp_cors==0.7.0
 aiohttp==3.8.4
+black==23.7.0
 coverage==7.2.7
 defusedxml==0.7.1
 frozendict==2.3.8
 globus-sdk==3.23.0
 hypothesis==6.81.1
 openpyxl==3.1.2
-pandas==2.0.3 
+pandas==2.0.3
+pymarkdownlnt==0.9.11
 pytest-aiohttp==1.0.4
 pytest-asyncio==0.21.0
 pytest-cov==4.1.0
