fix local config [PTV-1888]

--- a/deployment/conf/local.cfg
+++ b/deployment/conf/local.cfg
@@ -3,3 +3,4 @@ META_DIR = ./data/metadata/
 DATA_DIR = ./data/bulk/
 AUTH_URL = https://ci.kbase.us/services/auth/api/V2/token
 CONCIERGE_PATH = /kbaseconcierge
+FILE_EXTENSION_MAPPINGS = ./deployment/conf/supported_apps_w_extensions.json
