add docker plugin to devcontainer [PTV-1888]

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,8 @@
 				"mhutchie.git-graph",
 				"ms-python.black-formatter",
 				"ms-python.flake8",
-				"mikoz.autoflake-extension"
+				"mikoz.autoflake-extension",
+				"ms-azuretools.vscode-docker"
 			]
 		}
 	}
