--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,8 @@
 				"ms-python.black-formatter",
 				"ms-python.flake8",
 				"mikoz.autoflake-extension",
-				"ms-azuretools.vscode-docker"
+				"ms-azuretools.vscode-docker",
+				"DavidAnson.vscode-markdownlint"
 			]
 		}
 	}
