top level scripts have moved to the scripts directory [PTV-1888]

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -9,4 +9,4 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Run the tests
-      run: ./development/scripts/run run_tests.sh
+      run: ./development/scripts/run scripts/run_tests.sh
