refactor Dockerfile to support dev and prod workflows [PTV-1888] Uses multi-stage build to create a dev stage and production stage; removed other Dockerfiles, adjusted docker-compose and other things.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,7 +22,8 @@
 				"ms-python.flake8",
 				"mikoz.autoflake-extension",
 				"ms-azuretools.vscode-docker",
-				"DavidAnson.vscode-markdownlint"
+				"DavidAnson.vscode-markdownlint",
+				"matangover.mypy",
 			]
 		}
 	}
