--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -6,16 +6,21 @@ services:
   staging_service:
     build:
       context: ..
-      dockerfile: .devcontainer/Dockerfile
+      target: dev
 
-    image: kbase/staging_server_devcontainer:dev
+    # image: kbase/staging_server_devcontainer:dev
 
     container_name: staging_server_devcontainer
     dns: 8.8.8.8
     volumes:
-      - ..:/workspace:cached
+      - ..:/workspace
     networks:
       - kbase-dev
+    # Set some default environment variables, which enable the
+    # service to work inside the container without too much fussing.
+    env:
+      KB_DEPLOYMENT_CONFIG=./deployment/conf/local.cfg
+      FILE_LIFETIME=90
     # Required for a devcontainer -- keeps the container running.
     # Don't worry, our main interaction with the container is through the 
     # VSC terminal, which for a devcontainer opens a shell within the
