consolidate tool config into pyproject [PTV-1888] includes aligning black to the previous line length of 100, aligns isort to black (otherwise they fight each other), set up mypy and autoflake, flake8 doesn't use pyproject

--- a/tox.ini
+++ b/tox.ini
@@ -1,2 +1,5 @@
 [flake8]
+# unfortunately, flake8 does not play with pyproject.tom. what a shame.
+# one day perhaps we'll switch to ruff.
 max-line-length = 100
+extend-ignore = E203
