--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,12 @@ aiohttp==3.8.5
 aiohttp_cors==0.7.0
 defusedxml==0.7.1
 frozendict==2.3.8
+# Hold globus-sdk back until further notice.
 globus-sdk==1.6.1
 gunicorn==21.2.0
 openpyxl==3.1.2
 pandas==2.1.0
 python-dotenv==1.0.0
 python-magic==0.4.27
-types-openpyxl===3.1.0.17
 uvloop==0.17.0
 xlrd==2.0.1 # fairly out of date
