--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,11 +1,12 @@
-autoflake==2.2.0
-black==23.7.0
-coverage==7.3.0
-hypothesis==6.82.7
+autoflake==2.2.1
+black==23.9.1
+coverage==7.3.1
+hypothesis==6.84.3
 mypy==1.5.1
-pymarkdownlnt==0.9.12
+pymarkdownlnt==0.9.13.4
 pylint==2.17.5
-pytest-aiohttp==1.0.4
+pytest-aiohttp==1.0.5
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
-pytest==7.4.0
+pytest==7.4.2
+types-openpyxl===3.1.0.19
