remove extra comma [PTV-1888]

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,7 +23,7 @@
 				"mikoz.autoflake-extension",
 				"ms-azuretools.vscode-docker",
 				"DavidAnson.vscode-markdownlint",
-				"matangover.mypy",
+				"matangover.mypy"
 			]
 		}
 	}
